--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -2,4 +2,4 @@ home = C:\Users\User\AppData\Local\Programs\Python\Python313
 include-system-site-packages = false
 version = 3.13.7
 executable = C:\Users\User\AppData\Local\Programs\Python\Python313\python.exe
-command = C:\Users\User\AppData\Local\Programs\Python\Python313\python.exe -m venv E:\backend\venv
+command = C:\Users\User\AppData\Local\Programs\Python\Python313\python.exe -m venv E:\django\event-system\.venv
